# nano-pool-wallet

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
.github/workflows/: main.yml  rust.yml
config/: Config.toml  Config_sample.toml  config_sample.toml  config_test.toml
src/: account.rs  address.rs  block.rs  cli.rs  common.rs  config.rs  lib.rs  logger.rs  macros.rs  main.rs  pool.rs  rpc.rs  seed.rs  unit.rs  wallet.rs  ws.rs
src/communication/: rpc.rs
