[package]
name = "nano_pay"
version = "0.1.0"
authors = ["Daan Lubbers (Daan4@users.noreply.github.com)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "0.5.11"
rand = "0.8.4"
byteorder = "1.4.3"

# This is a modified version of https://github.com/dalek-cryptography/ed25519-dalek
# which hashes using blake2b instead of sha256.
# https://github.com/gak/ed25519-dalek/commit/82ba167fdb3a7f667812f309acc98241e0959c8f
# It lives in external/ed25519-dalek
# Taken from https://github.com/feeless/feeless 
# All credit goes to the feeless project for being an awesome resource for nano Rust
# Feeless is also licenced under the MIT license
ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
